# sushi-guard-monitor

./: .gitignore  Dockerfile  brownie-config.yml  buf.proto  buf.yml  docker-compose.yml  entrypoint.sh  prometheus.yml  pyproject.toml
app/: main.py
grafana/provisioning/dashboards/: dashboards.yml
schema/: schema.proto  schema_pb2.py  schema_pb2_grpc.py
sushi/output/: victoriametrics.py
