[tool.poetry]
name = "sushi-router-monitor"
version = "0.1.0"
description = "sushi guard monitor"
authors = ["sam bacha <sam@manifoldfinance.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.7"
eth-retry = "^0.1.3"
grpcio-tools = "^1.47.0"
uvicorn = "^0.18.1"
web3 = "^5.29.2"
eth-brownie = "^1.19.0"
fastapi = "^0.78.0"
boto3 = "^1.24.16"
pony = "^0.7.16"
rich = "^12.4.4"
cachetools = "^5.2.0"
SQLAlchemy = "^1.4.38"
pandas = "^1.4.3"
psycopg2-binary = "^2.9.3"
joblib = "^1.1.0"
click = "^8.1.3"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
pytest-bdd = "^5.0.0"
semantic-version = "^2.10.0"
pylint = "^2.14.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
